<resources>
    <string name="app_name">智能配电</string>
    <string name="nav_tit">餐厅</string>
    <string name="nav_area">区域</string>
    <string name="nav_power">能耗</string>
    <string name="nav_user">我的</string>
    <string name="qusAndSug">问题与建议</string>
    <string name="modifyPassword">修改密码</string>
    <string name="deviceManager">设备管理</string>
    <string name="help">使用帮助</string>
    <string name="about">关于</string>
    <string name="company_name_EN">Copyright © 2017 Suntrans. All rights reserved.</string>
    <!--<string name="company_name_CH">广州三川智控工程装备有限公司</string>-->
    <string name="company_name_CH">广州三川控制系统工程设备有限公司</string>
    <string name="company_reserved">Copyright © 2017 广州三川控制系统工程设备有限公司版权所有</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="nav_env">环境</string>
    <string name="dinTitle">TIT餐厅智能配电</string>
    <string name="abcd">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUV WXYZ</string>
    <string name="abcd123">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="queding">确定</string>
    <string name="qvxiao">取消</string>
    <string name="choose_action">选择动作</string>
    <string name="channel_choose_close">关闭</string>
    <string name="channel_choose_open">打开</string>
    <string name="tips_uploading">正在上传图片请稍后</string>
    <string name="tips_upload_failed">图片上传失败</string>
    <string name="permission_title_rationale">请求权限</string>
    <string name="label_select_picture">选择图片</string>
    <string name="footer_tx">----------------没有更多了----------------</string>
    <string name="scene_time_workday">周一至周五</string>
    <string name="scene_time_everyday">每天执行</string>
    <string name="activity_title_dingshi">定时</string>
    <string name="tx_version_code">版本号:</string>
    <string name="tx_share_app">分享智能配电</string>
    <string name="tx_share_app_des">智能配电app下载地址:https://www.pgyer.com/5xcP</string>
    <string name="activity_title_add_area">添加区域</string>
    <string name="tx_choose_floor">-----请选择楼层-----</string>
    <string name="tips_please_enter_name">请输入名称</string>
    <string name="tips_please_choose_floor">请选择楼层</string>
    <string name="tips_please_waiting">请稍后</string>
    <string name="tips_add_success">添加成功</string>
    <string name="activity_title_choose_device">选择要添加的设备</string>
    <string name="tips_please_choose_one">请选择一个设备</string>
    <string name="tips_is_add_count">是否添加%1$d个设备</string>
    <string name="week">星期</string>
    <string name="tips_delete_timmer">是否删除该定时设置?</string>
    <string name="query">查询</string>

</resources>
