<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/qvxiao"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/qvxiao"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/queding"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/queding"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="更改场景名称"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/name_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="请输入中文名称"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="16"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="8dp"
            android:layout_below="@id/name_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/nameEn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="请输入英文"
                android:digits="@string/abcd"
                android:inputType="text"
                android:maxLength="16"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>